re-render readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -85,7 +85,7 @@ What is your expected output?
 - if you have a function with random processes: a fixed seed before your example starts 
 (fix seeds by calling set.seed() function)
 
-### R can help you to ask a good question!
+## 4. R can help you to ask a good question!
 
 Luckily, there are nice R functions that help you create a reproducible
 example of your problem/question including data, plots and error messages that ensure
@@ -96,14 +96,16 @@ Learning how to use these functions will make question asking and answering much
 easier. Reproducible examples are key to getting your questions answered fast, therefore
 it is worth to learn how to produce them from the very beginning.
 
-#### Include a minimal dataset
+### Include a minimal dataset
 
 The easiest way to share your data is by using the dput command. 
 
 Basic:
+
 - Copy and paste the output of `dput(<your_data>)`
 
 More advanced (if your data is too large for dput):
+
 - Create a gist with dput in it and provide the link (e.g. on Github, more info [here](https://docs.github.com/en/free-pro-team@latest/github/writing-on-github/creating-gists))
 - Create a pastebin with dput in it and provide the link
 
@@ -118,11 +120,12 @@ your problem. E.g. provide a subset with fewer columns and fewer rows.
 ```{r}
 # This is how the data looks like
 mtcars[1:5, 1:2]
+
 # get code that generates the frist five lines and first two columns your dataset
 dput(mtcars[1:5, 1:2])
 ```
 
-#### Create an example with runnable code using the `reprex` package
+### Create an example with runnable code using the `reprex` package
 
 
 The reprex package helps you turn your code into reproducible examples.
@@ -140,7 +143,7 @@ Because
 
 **In which situations is this helpful?**
 
-- When asking a question on a forum, Stackoverflow, GitHub, ...
+- When asking a question on a forum, Stack Overflow, GitHub, ...
 - When asking a colleague or friend about some code issues that you have
 - When you want to paste R code in a highlighted and formatted form somewhere else
 
@@ -233,7 +236,7 @@ reprex({
 ```
 If you now call this, your rendered reprex will be on your clipboard and can be pasted somewhere.
 
-##### So which setup should be chosen for the discussion forum in Blackboard?
+**So which setup should be chosen for the discussion forum in Blackboard?**
 
 Unfortunately, neither the blackboard forum nor the Webex meetings chat does support
 markdown formatting. 
@@ -241,15 +244,23 @@ If you use the forum, Webex chat or Email to share your code I therefore suggest
 `venue = "r"`. This does not support syntax highlighting and does not include plots 
 but it ensures that all the output of your code is included.
 
-So a concrete examples would be: 
+So a concrete example would be: 
 
 ```{r eval=F}
 # This includes the session info and does not show the rendered reprex locally 
 reprex(venue="r",show=FALSE, si=TRUE)
 ```
 
-If you want to include a plot in your reproducible example, I suggest you use `venu = "html`.
-Like this, a link to the image is included and is shown below your code in the forum.
+If you want to include a plot in your reproducible example, I suggest you use `venu = "html"`.
+So something like:
+
+```{r eval=F}
+reprex(venue="html",show=FALSE, si=TRUE)
+```
+
+A link to the image is included in the html and the plot will be shown below your 
+code in the forum.
+
 In the blackboard forum, you can include html code by clicking on the little `HTML button`
 in the editor. If you don't see this button, you have to expand your toolbar, by clicking on the
 two arrows on the right.
@@ -257,7 +268,7 @@ If you click on the HTML button, a window opens, where your post is shown in htm
 Your can just past your reproducible example in there after inserting a new line.
 
 
-##### Addins
+#### Addins
 
 If you install the reprex package, you will find two Addins (in the top row of RStudio, right below Help). 
 There is the addin `Reprex selection`. If you click this, the code that is currently 
@@ -292,7 +303,7 @@ library(styler)
 When you installed the package, there is also a addin that you can use to format your code.
 You can select the code you want to style with the mouse, got to `Addins->Style Selection`
 and voilà, your code is styled nicely.
-By default, style uses the style guide of the tidyverse (see [here](https://style.tidyverse.org/) for more info)
+By default, styler uses the style guide of the tidyverse (see [here](https://style.tidyverse.org/) for more info)
 which is a pretty common and well thought through standard. So you can just leave it like that.
 
 ### Use styler on your reprex
@@ -301,7 +312,7 @@ If you don't want to style the code in your script, you should definitely consid
 styling the reproducible example that you provide. Fortunately, there is an argument 
 `style` that you can pass into the reprex function that does that for you.
 
-```{r}
+```{r eval=FALSE}
 reprex(venue="r", show=FALSE, si=TRUE, style=TRUE)
 ```
 
