Mention example R script

--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,8 @@ asking to make the whole experience more pleasant and productive.
 
 Please read the following guide to get an idea of how to trouble-shoot R problems and 
 where and how to get the best help.
+Also have a look at the file `Example.R` from this repository. You can download this script
+and try it out yourself.
 
 ## 1. Read the R documentation before you ask
 
