--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,7 @@
 ---
-output: github_document
+output: 
+  github_document:
+    toc: true
 ---
 
 <!-- README.md is generated from README.Rmd. Please edit that file -->
@@ -132,7 +134,7 @@ help(`[`)
 Learning how to search for an answer on the internet is arguably one of the most important
 problem solving skills when programming. In most (if not all) cases, you are not 
 the first one having a specific problem and others already posted questions about it on
-forums such as [Stack Overflow](https://stackoverflow.com). You just need to learn how to formulate
+forums such as Stack Overflow. You just need to learn how to formulate
 a question and you will find the correct answer within the first hits from your search
 engine of choice.
 
@@ -171,7 +173,7 @@ What is your expected output?
 - if you have a function with random processes: a fixed seed before your example starts 
 (fix seeds by calling set.seed() function)
 
-## 4. R can help you to ask a good question!
+## 4. How R can help you to ask a good question
 
 Luckily, there are nice R functions that help you create a reproducible
 example of your problem/question including data, plots and error messages that ensure
@@ -182,7 +184,7 @@ Learning how to use these functions will make question asking and answering much
 easier. Reproducible examples are key to getting your questions answered fast, therefore
 it is worth to learn how to produce them from the very beginning.
 
-### Include a minimal dataset
+### Include a minimal dataset with `dput`
 
 The easiest way to share your data is by using the dput command. 
 
@@ -408,8 +410,21 @@ style guide.
 ## Further ressources
 
 - more on how to make great reproducible examples in R [here](https://stackoverflow.com/questions/5963269/how-to-make-a-great-r-reproducible-example)
-- great into to the `reprex` package by Jenny Bryan in [this video](video](https://community.rstudio.com/t/video-reproducible-examples-and-the-reprex-package/14732)
+- great intro to the `reprex` package by Jenny Bryan in [this video](video](https://community.rstudio.com/t/video-reproducible-examples-and-the-reprex-package/14732)
 - Github repository of the [`styler` package](https://github.com/r-lib/styler)
+
+### Good adresses for help and inspiration:
+
+- [Stack Overflow](https://stackoverflow.com): Probably the most famous forum for questions
+- [RBloggers](https://www.r-bloggers.com/): Many tutorials
+- [DiscoRd](https://discord.gg/FQp6ZNd): Discord server where you can ask questions, 
+find resources and chat with other R users about R Stuff
+- If you are a twitter user, you can follow the `#rstats` hashtag
+
+# Acknowledgements
+
+Thanks to @AnneLew and the person behind the readme docs of the [DiscoRd](https://discord.gg/FQp6ZNd) server
+for providing much of the material presented here.
 
 
 
