--- a/README.Rmd
+++ b/README.Rmd
@@ -87,7 +87,7 @@ knitr::include_graphics("images/R_Crash.png")
 - Before you execute new code, look for missing closing brackets in your code (usually this is already indicated with a red x on the left side of your script in RStudio).
 
 ```{r echo=FALSE}
-knitr::include_graphics(path ="images/Console_plus.png")
+knitr::include_graphics(path = "images/Console_plus.png")
 ```
 
 **9. Warnings**
@@ -103,17 +103,18 @@ if you are sure that they don't mean that something in your code is wrong.
 # What to do if you get stuck with R
 
 It's normal to get stuck on a problem where you need help from someone. Don't worry!
-The course forum (and other online forums) are the perfect place to ask your question.
+Online forums are the perfect place to ask your question.
 However, it is important to follow some guidelines for problem solving and question 
 asking to make the whole experience more pleasant and productive.
 
-Please read the following guide to get an idea of how to trouble-shoot R problems and where and how to get the best help.
-Also have a look at the file `Example.R` from this repository. You can download this script and try it out yourself.
+Please read the following guide to get an idea of how to trouble-shoot R problems 
+and where and how to get the best help. Also have a look at the file `Example.R` 
+from this repository. You can download this script and try it out yourself.
 
 ## 1. Read the R documentation before you ask
 
 Often, questions about how to use a particular function are solved by just 
-reading the doc. To bring up the doc for a function in R, type ? followed by the 
+reading the doc. To bring up the doc for a function in R, type `?` followed by the 
 function name to check the doc for the function, e.g.:
 
 ```{r eval=FALSE}
@@ -122,7 +123,7 @@ help(mean)
 ```
 
 Some special functions start with a symbol instead of an alphabet. In such cases, 
-wrap the function in backticks ``. e.g., to check the doc for the [ function:
+wrap the function in backticks, e.g., to check the doc for the `[` function:
 
 ```{r eval=FALSE}
 ?`[`
@@ -154,7 +155,7 @@ from the console to your search engine and find answers
 ## 3. How to ask a good question?
 
 If you didn't find the answer with any of the above mentioned methods, you can ask
-a question on a forum so that others can help you.
+colleagues and friends or ask a question on a forum so that others can help you.
 You should ask your questions as clear as possible to minimize guesswork and make
 answering easy and effective.
 
@@ -423,8 +424,7 @@ find resources and chat with other R users about R Stuff
 
 # Acknowledgements
 
-Thanks to @AnneLew and the person behind the readme docs of the [DiscoRd](https://discord.gg/FQp6ZNd) server
-for providing much of the material presented here.
+Thanks to @AnneLew and the person behind the readme docs of the [DiscoRd](https://discord.gg/FQp6ZNd) server for providing much of the material presented.
 
 
 
